# UnityRobot_

./: .gitignore  LICENSE  README.md
Com-lib/: .gitignore  README.md  UnityRobot_CommLib.sln
Com-lib/UnityRobot_CommLib/: CMakeLists.txt  Communicator.hpp  LogFileCreator.cpp  LogFileCreator.h  MessageBuilder.cpp  MessageBuilder.h  MessageBuilder.hpp  ProtobufPresentation.cpp  ProtobufPresentation.h  ProtobufPresentation.hpp  RobotLogger.cpp  RobotLogger.h  RobotSocket.cpp  RobotSocket.h  TCPSocketDataLink.cpp  TCPSocketDataLink.hpp  UnityRobot_CommLib.vcxproj  UnityRobot_CommLib.vcxproj.filters  communicator.cpp  communicator.h  main.cpp  servermain.cpp
Com-lib/UnityRobot_CommLib/proto/: CMakeLists.txt  message.pb.cc  message.pb.h  message.proto  messages.pb.cc  messages.pb.h  transform.pb.cc  transform.pb.h  transform.proto
Com-lib/UnityRobot_CommLib/protobuf/: message.pb.cc  message.pb.h  messages.pb.cc  messages.pb.h  transform.pb.cc  transform.pb.h
Com-lib/UnityRobot_CommLib/protobuf/google/protobuf/: unittest_custom_options.pb.cc  unittest_import_lite.pb.cc  unittest_no_arena.pb.cc  unittest_no_arena_lite.pb.cc  unittest_no_field_presence.pb.cc
Com-lib/UnityRobot_CommLib/protobuf/google/protobuf/util/internal/testdata/: default_value_test.pb.cc
Com-lib/UnityRobot_CommLib/protobuf/include/: map_lite_unittest.pb.cc  unittest.pb.cc  unittest_drop_unknown_fields.pb.cc  unittest_lite.pb.cc  unittest_proto3_lite.pb.cc
Com-lib/UnityRobot_CommLib/protobuf/include/util/: message_differencer_unittest.pb.cc
Com-lib/UnityRobot_CommLib/spdlog/: CMakeLists.txt  common.h  formatter.h  logger.h  spdlog.h
Com-lib/UnityRobot_CommLib/spdlog/details/: async_log_helper.h  async_logger_impl.h  file_helper.h  log_msg.h  logger_impl.h  mpmc_bounded_q.h  os.h  pattern_formatter_impl.h  registry.h  spdlog_impl.h
Com-lib/UnityRobot_CommLib/spdlog/fmt/: fmt.h  ostr.h
Com-lib/UnityRobot_CommLib/spdlog/sinks/: android_sink.h  ansicolor_sink.h  base_sink.h  dist_sink.h  file_sinks.h  msvc_sink.h  null_sink.h  ostream_sink.h  sink.h  stdout_sinks.h  syslog_sink.h
Com-lib/UnityRobot_CommLib/src/Networking/: CMakeLists.txt  IDataLink.hpp  IDataStreamReceiver.hpp  IMessageReceiver.hpp  IMessageSender.hpp  IPresentationProtocol.hpp  IPresentationProtocolSerializer.hpp  Message.h
Com-lib/x64/Debug/: UnityRobot_CommLib.ilk  lnk{9B6D27D6-7A6D-4E13-A592-CD544860A52E}.tmp
PythonHost-Nao-sdk/: NaoBroker.cs  Program-robot-controller.cs  Program.cs  PythonToCS.sln  XboxController.cs  nao_broker.csproj  packages.config  propagation-commands.cs  propagation-xboxcontroller.cs
PythonHost-Nao-sdk/Properties/: AssemblyInfo.cs
PythonHost-Nao-sdk/PythonHost/: WHAT TO DO.txt  main.py
PythonHost-Nao-sdk/PythonHost/NaoBroker/: nao_service.py
PythonHost-Nao-sdk/PythonHost/controller/: xinput.py
Unity/Pathfinding/: pathfinding.unitypackage
Unity/RobotMaster/: .gitignore  README.md
Unity/RobotMaster/Assets/: Rotater.cs  (+3 more)
Unity/Vision/: .gitignore  Assignment  CMakeCache.txt  CMakeLists.txt  Display.cpp  Display.h  Makefile  README.md  Recorder.h  cmake_install.cmake  config.yml  filters.cpp  filters.h  main.cpp  recorder.cpp
Unity/Vision/resources/: README.md  config.yml
Unity/Vision/samples/: EV3.yml  README.md
Unity/Vision/src/: Display.cpp  Display.h  MessageHandler.cpp  MessageHandler.h  Recorder.cpp  Recorder.h  Robot.h  Runnable.cpp  Runnable.hpp  Settings.cpp  Settings.h  Settings.hpp
Unity/Vision/src/RobotDetection/: Calibrator.cpp  Calibrator.h  RobotDetection.cpp  RobotDetection.h
Unity/Vision/src/commlib/: IDataLink.hpp  IMessageSender.hpp  IPresentationProtocol.hpp  LogFileCreator.h  MessageBuilder.h  ProtobufPresentation.h  RobotLogger.h  TCPSocketDataLink.hpp  communicator.h
Unity/Vision/src/commlib/protobuf/: message.pb.h  messages.pb.h
Unity/Vision/src/commlib/protobuf/google/protobuf/: unittest_import_public_lite.pb.cc  unittest_lite_imports_nonlite.pb.cc  unittest_proto3_arena.pb.cc  unittest_proto3_arena_lite.pb.cc
Unity/Vision/src/commlib/protobuf/google/protobuf/compiler/cpp/: cpp_test_bad_identifiers.pb.cc
Unity/Vision/src/commlib/protobuf/google/protobuf/util/: json_format_proto3.pb.cc
Unity/Vision/src/commlib/protobuf/google/protobuf/util/internal/testdata/: books.pb.cc
Unity/Vision/src/framefeeders/: CameraFeedSender.cpp  CameraFeedSender.hpp  MediaFeedSender.cpp  MediaFeedSender.hpp
Unity/Vision/src/framereaders/: FrameMoveThreadHelper.cpp  FrameMoveThreadHelper.hpp  VideoFrameDisplayer.cpp  VideoFrameDisplayer.hpp  VideoFrameSaver.cpp  VideoFrameSaver.hpp
Unity/Vision/src/framereaders/robotmapping/: Calibrator.cpp  Calibrator.h  Calibrator.hpp  Detector.cpp  Detector.hpp  IShapeDetectionEvents.hpp  IShapeTracker.hpp  IShapeTrackers.hpp  IWorldMappingEventSubscriber.hpp  KalmanShapeTracker.cpp  KalmanShapeTracker.hpp  MappingSubscriberConsolePrinter.cpp  MappingSubscriberConsolePrinter.hpp  ObjectDetector.cpp  ObjectDetector.hpp  Shape.cpp  Shape.hpp  ShapeDetectorBase.cpp  ShapeDetectorBase.hpp  ShapeTrackers.hpp  ShapesTracker.cpp  ShapesTracker.hpp
Unity/Vision/src/frames/: VideoFeedFrameReceiver.hpp  VideoFeedFrameReceiverTargets.cpp  VideoFeedFrameReceiverTargets.hpp  VideoFeedFrameSender.cpp  VideoFeedFrameSender.hpp
networking/: README.md  networking.sln
networking/networking/: networking.csproj
proto/: README.md  generate_for_unity.bat
proto/messages/: addressbook.proto  message.proto  messages.proto  transform.proto
robot/: README.md
robot/NaoBroker/: NaoConnection.cs  NaoRobot.cs  Program.cs  PythonToCS.sln  WHAT TO DO.txt  nao_broker.csproj  propagation-console.cs  propagation-main_func.cs  propagation-nao-commands.cs
robot/broker/: broker.sln
robot/ev3-broker/: CMakeLists.txt  EV3Wifi.ev3  ev3-broker.sln
robot/ev3-broker/ev3-broker/: EV3.cs  EV3Robot.cs  EV3ServiceListener.cs  EV3Wifi.cs  Ev3Connection.cs  Program.cs  ev3-broker.csproj
robot/ev3-broker/ev3-broker/Properties/: AssemblyInfo.cs
robot/ev3-broker/include/: ev3wifi.h
robot/ev3-broker/src/: ev3wifi.cpp  main.cpp
robot/nao-broker/: nao-broker.sln
(+136 files in other folders)
